# cv_misis_project

./: .gitignore  pyproject.toml
cv_misis_project/: train.py
cv_misis_project/datasets/: image_data.py  shanghai_dataset.py
cv_misis_project/models/: csrnet.py  csrnet_transformers.py
cv_misis_project/utils/: image_utils.py  transformers_image_processor.py
research/: benchmark_analysis.ipynb  dataset_research.ipynb
