[tool.poetry]
name = "cv-misis-project"
version = "0.1.0"
description = "Проект по дисциплине \"Компьютерное зрение\""
authors = ["Dmitriy Emelyanov, Kirill Voronkov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
torchvision = "^0.20.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
