[tool.poetry]
name = "cv-misis-project"
version = "0.1.0"
description = "Проект по дисциплине \"Компьютерное зрение\""
authors = ["Dmitriy Emelyanov, Kirill Voronkov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
plotly = "^5.24.1"
pandas = "^2.2.3"
nbformat = "^5.10.4"
scipy = "^1.14.1"
pytorch-lightning = "^2.4.0"
wandb = "^0.19.1"
matplotlib = "^3.10.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
transformers = "^4.48.0"
timm = "^1.0.13"
geomloss = "^0.2.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
